# matrix-docker-ansible-deploy

./: .gitignore  deploy.sh  flake.nix  pyproject.toml  requirements.yml  start.sh
.github/workflows/: matrix.yml  update-translations.yml
docs/: configuring-playbook-tuwunel.md
inventory/: hosts
inventory/host_vars/matrix.boxmein.net/: vars.yml
roles/custom/matrix-bridge-mautrix-telegram/templates/: config.yaml.j2
roles/custom/matrix-synapse/templates/goofys/systemd/: matrix-goofys.service.j2
roles/custom/matrix-tuwunel/defaults/: main.yml
roles/matrix-bridge-mautrix-telegram/templates/: config.yaml.j2
roles/matrix-prometheus/templates/: prometheus.yml.j2
roles/matrix-synapse/templates/goofys/systemd/: matrix-goofys.service.j2
