[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["boxmein <wsdf294@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
passlib = "^1.7.4"
ansible = "^6.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
